La pàgina d'inici es conecta amb el back però encara no accedeix al carrito

--- a/AppTakeAway/app/src/main/res/values/strings.xml
+++ b/AppTakeAway/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppTakeAway</string>
+    <string name="increment"><![CDATA[>]]></string>
+    <string name="decrement"><![CDATA[<]]></string>
 </resources>
